На проверку к предзащите

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,14 +61,14 @@
         <ul class="catalog__list">
           <li class="catalog__item" id="catalog-pro">
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
-            <a href="#" class="catalog__item-image">
+            <a href="#" class="catalog__item-image catalog__item-image--small catalog__item-image--first">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-chicken-500-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-500-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-pro-chicken-500-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-500-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-pro-chicken-500.webp 1x, img/catalog/cat-energy-pro-chicken-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-chicken-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-500-tablet@2x.png 2x">
+                  srcset="img/catalog/cat-energy-pro-chicken-500-tablet.png 1x, img/catalog/cat-energy-pro-chicken-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-500.png" width="68"
                   height="86" srcset="img/catalog/cat-energy-pro-chicken-500@2x.png 2x"
                   alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 500г">
@@ -93,15 +93,15 @@
 
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
-            <a href="#" class="catalog__item-image catalog__item-image--large">
+            <a href="#" class="catalog__item-image">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-chicken-1000-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-1000-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-pro-chicken-1000-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-1000-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-pro-chicken-1000.webp 1x, img/catalog/cat-energy-pro-chicken-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-chicken-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-1000-tablet@2x.png 2x">
-                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-1000.png" width="84"
+                  srcset="img/catalog/cat-energy-pro-chicken-1000-tablet.png 1x, img/catalog/cat-energy-pro-chicken-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture catalog__item-picture--large" src="img/catalog/cat-energy-pro-chicken-1000.png" width="84"
                   height="100" srcset="img/catalog/cat-energy-pro-chicken-1000@2x.png 2x"
                   alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 1000г">
               </picture>
@@ -125,14 +125,14 @@
 
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
-            <a href="#" class="catalog__item-image">
+            <a href="#" class="catalog__item-image catalog__item-image--small">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-fish-500-tablet.webp 1x, img/catalog/cat-energy-pro-fish-500-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-pro-fish-500-tablet.webp 1x, img/catalog/cat-energy-pro-fish-500-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-pro-fish-500.webp 1x, img/catalog/cat-energy-pro-fish-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-fish-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-500-tablet@2x.png 2x">
+                  srcset="img/catalog/cat-energy-pro-fish-500-tablet.png 1x, img/catalog/cat-energy-pro-fish-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-500.png" width="68" height="78"
                   srcset="img/catalog/cat-energy-pro-fish-500@2x.png 2x"
                   alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 500г">
@@ -160,12 +160,12 @@
             <a href="#" class="catalog__item-image">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-fish-1000-tablet.webp 1x, img/catalog/cat-energy-pro-fish-1000-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-pro-fish-1000-tablet.webp 1x, img/catalog/cat-energy-pro-fish-1000-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-pro-fish-1000.webp 1x, img/catalog/cat-energy-pro-fish-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-pro-fish-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-1000-tablet@2x.png 2x">
-                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-1000.png" width="84"
+                  srcset="img/catalog/cat-energy-pro-fish-1000-tablet.png 1x, img/catalog/cat-energy-pro-fish-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture catalog__item-picture--large" src="img/catalog/cat-energy-pro-fish-1000.png" width="84"
                   height="100" srcset="img/catalog/cat-energy-pro-fish-1000@2x.png 2x"
                   alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 1000г">
               </picture>
@@ -189,14 +189,14 @@
 
           <li class="catalog__item" id="catalog-slim">
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
-            <a href="#" class="catalog__item-image">
+            <a href="#" class="catalog__item-image catalog__item-image--small">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-500-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-slim-buckwheat-500-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-500-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-slim-buckwheat-500.webp 1x, img/catalog/cat-energy-slim-buckwheat-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet@2x.png 2x">
+                  srcset="img/catalog/cat-energy-slim-buckwheat-500-tablet.png 1x, img/catalog/cat-energy-slim-buckwheat-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68"
                   height="78" srcset="img/catalog/cat-energy-slim-buckwheat-500@2x.png 2x"
                   alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 500г">
@@ -224,12 +224,12 @@
             <a href="#" class="catalog__item-image">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-1000-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-slim-buckwheat-1000-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-1000-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-slim-buckwheat-1000.webp 1x, img/catalog/cat-energy-slim-buckwheat-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet@2x.png 2x">
-                <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84"
+                  srcset="img/catalog/cat-energy-slim-buckwheat-1000-tablet.png 1x, img/catalog/cat-energy-slim-buckwheat-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture catalog__item-picture--large" src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84"
                   height="100" srcset="img/catalog/cat-energy-slim-buckwheat-1000@2x.png 2x"
                   alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 1000г">
               </picture>
@@ -253,14 +253,14 @@
 
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
-            <a href="#" class="catalog__item-image">
+            <a href="#" class="catalog__item-image catalog__item-image--small">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-rice-500-tablet.webp 1x, img/catalog/cat-energy-slim-rice-500-tablet@2x.webp 2x">
+                  srcset="img/catalog/cat-energy-slim-rice-500-tablet.webp 1x, img/catalog/cat-energy-slim-rice-500-tablet@2x.webp 2x">
                 <source type="image/webp"
                   srcset="img/catalog/cat-energy-slim-rice-500.webp 1x, img/catalog/cat-energy-slim-rice-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
-                  srcset="img/catalog/tablet/cat-energy-slim-rice-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-rice-500-tablet@2x.png 2x">
+                  srcset="img/catalog/cat-energy-slim-rice-500-tablet.png 1x, img/catalog/cat-energy-slim-rice-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-rice-500.png" width="72" height="84"
                   srcset="img/catalog/cat-energy-slim-rice-500@2x.png 2x"
                   alt="Фиолетовая упаковка Cat Energy SLIM со вкусом риса на 500г">
@@ -285,7 +285,7 @@
 
           <li class="catalog__item catalog__item--reveal">
             <p class="catalog__item-text catalog__item-text--reveal">Показать еще 100500 товаров</p>
-            <p class="catalog__item-text catalog__item-text--reveal--additional text">На самом деле вкусов гораздо
+            <p class="catalog__item-text catalog__item-text--reveal catalog__item-text--additional text">На самом деле вкусов гораздо
               больше!</p>
             <a href="#" class="button catalog__item-button catalog__item-button--reveal">Показать
               все</a>
@@ -341,7 +341,8 @@
         <h2 class="visually-hidden">Как нас найти</h2>
 
         <div class="location__content-wrapper">
-          <h3 class="heading heading--min location__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+          <h3 class="heading heading--min location__title">Приглашаем<br> <span class="location__title-space">к
+              сотрудничеству</span> дилеров!</h3>
           <p class="text location__text">ул. Большая<br> Конюшенная, д. 19/8<br> <span
               class="location__text-space">Санкт-Петербург</span></p>
         </div>
@@ -365,7 +366,7 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">VKontakte</span>
-              <svg class="contacts__link-social-icon" width="30" height="22">
+              <svg class="contacts__link-social-icon contacts__link-social-icon--first" width="30" height="22">
                 <use xlink:href="img/sprite.svg#icon-vkontakte"></use>
               </svg>
             </a>
@@ -374,7 +375,7 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">Instagram</span>
-              <svg class="contacts__link-social-icon" width="23" height="23">
+              <svg class="contacts__link-social-icon contacts__link-social-icon--second" width="23" height="23">
                 <use xlink:href="img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
@@ -383,7 +384,9 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">Facebook</span>
-              <svg class="contacts__link-social-icon contacts__link-social-icon--stroke" width="22" height="22">
+              <svg
+                class="contacts__link-social-icon contacts__link-social-icon--stroke contacts__link-social-icon--third"
+                width="22" height="22">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
