--- a/source/index.html
+++ b/source/index.html
@@ -123,8 +123,8 @@
         </li>
 
         <li class="features__item features__item--fourth">
-          <p class="text features__description features__description--time">Уже через месяц<br> наслаждайтесь
-            изменениями<br> к лучшему вашего питомца!
+          <p class="text features__description features__description--time">Уже через месяц наслаждайтесь изменениями к
+            лучшему <span class="features__description-tablet-break">вашего питомца!</span>
           </p>
         </li>
       </ul>
@@ -220,7 +220,8 @@
         <h2 class="visually-hidden">Как нас найти</h2>
 
         <div class="location__content-wrapper">
-          <h3 class="heading heading--min location__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+          <h3 class="heading heading--min location__title">Приглашаем<br> <span class="location__title-space">к
+              сотрудничеству</span> дилеров!</h3>
           <p class="text location__text">ул. Большая<br> Конюшенная, д. 19/8<br> <span
               class="location__text-space">Санкт-Петербург</span></p>
         </div>
@@ -244,7 +245,7 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">VKontakte</span>
-              <svg class="contacts__link-social-icon" width="30" height="22">
+              <svg class="contacts__link-social-icon contacts__link-social-icon--first" width="30" height="22">
                 <use xlink:href="img/sprite.svg#icon-vkontakte"></use>
               </svg>
             </a>
@@ -253,7 +254,7 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">Instagram</span>
-              <svg class="contacts__link-social-icon" width="23" height="23">
+              <svg class="contacts__link-social-icon contacts__link-social-icon--second" width="23" height="23">
                 <use xlink:href="img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
@@ -262,7 +263,9 @@
           <li class="contacts__item">
             <a href="#" class="contacts__link">
               <span class="visually-hidden">Facebook</span>
-              <svg class="contacts__link-social-icon contacts__link-social-icon--stroke" width="22" height="22">
+              <svg
+                class="contacts__link-social-icon contacts__link-social-icon--stroke contacts__link-social-icon--third"
+                width="22" height="22">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
